<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#97F3D6B0"

    tools:context=".ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C65322"></androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/username_id"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:background="@drawable/shape"
            android:hint="@string/enter_your_username"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"

            android:background="@drawable/shape"
            android:hint="@string/enter_your_password"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email_id"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"

            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape"
            android:hint="@string/enter_your_email"

            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_birthdate"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"

            android:layout_marginRight="20dp"
            android:background="@drawable/shape"
            android:hint="@string/enter_your_birthdate"
            android:padding="10dp"

            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sp_country"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"

            android:background="@drawable/shape"
            android:entries="@array/spinner_country"
            android:padding="10dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"

            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/rb_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="#000000"
                android:textSize="20dp"

                />

            <RadioButton
                android:id="@+id/rb_gender2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/female"
                android:textColor="#000000"
                android:textSize="20dp"

                />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="-30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delet_id"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/shapebt"
                android:text="@string/delete"
                android:textColor="#E6A671"

                android:textSize="18dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_id"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/shapebt"
                android:text="@string/edit"
                android:textColor="#E6A671"

                android:textSize="18dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_id"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:textColor="#E6A671"
                android:background="@drawable/shapebt"
                android:text="@string/save"
                android:textSize="18dp" />
        </LinearLayout>






    </LinearLayout>

</ScrollView>