<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBF3D6B0"
    android:orientation="vertical"
    tools:context=".HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C65322"></androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_game_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:background="@drawable/btbacground"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/start_play"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/setting_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btbacground"
            android:fontFamily="@font/abril_fatface"

            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:background="@drawable/btbacground"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/exit"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>