<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EBF3D6B0"
    tools:context=".StaticsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"

            app:srcCompat="@drawable/logooo_removebg_preview" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/the_number_of_true_answer"
            android:textColor="#C65322"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_true"
            android:text="0"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="@color/material_dynamic_neutral20"
            android:fontFamily="sans-serif"
            />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/the_number_of_false_answer"
            android:textColor="#C65322"

            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_false"
            android:text="0"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="@color/black"

            android:fontFamily="sans-serif"
            />
        <TextView
            android:id="@+id/numberOfquestionend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/the_number_of_question_is_end"
            android:textColor="#C65322"

            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/question"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:text="0"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            />
    </LinearLayout>

</ScrollView>